--- a/internal/ui/components/header.templ
+++ b/internal/ui/components/header.templ
@@ -1,5 +1,7 @@
 package components
 
+import "github.com/dimiro1/faas-go/internal/ui/components/icons"
+
 css header() {
 	height: 56px;
 	border-bottom: 1px solid var(--color-border);
@@ -106,7 +108,7 @@ templ Header(currentPage string, breadcrumb string) {
 		<div class={ headerLeft() }>
 			<div class={ headerBrand() }>
 				<div class={ headerLogo() }>
-					<i class="fas fa-bolt"></i>
+					@icons.Bolt()
 				</div>
 				<a href="/" class={ headerNavLink() }>Dashboard</a>
 				if breadcrumb != "" {
