--- a/internal/ui/components/input_with_copy.templ
+++ b/internal/ui/components/input_with_copy.templ
@@ -1,5 +1,10 @@
 package components
 
+import (
+	"github.com/dimiro1/faas-go/internal/ui/components/button"
+	"github.com/dimiro1/faas-go/internal/ui/components/icons"
+)
+
 css inputWithCopyWrapper() {
 	display: flex;
 	gap: 0.5rem;
@@ -24,6 +29,10 @@ templ InputWithCopy(value string, readonly bool) {
 		} else {
 			<input type="text" value={ value } class={ inputWithCopyInput() }/>
 		}
-		@IconButton("fa-copy")
+		@button.Button(button.Props{
+			Variant: button.Ghost,
+			Size:    button.SizeIcon,
+			Icon:    icons.Copy(),
+		})
 	</div>
 }
